Python Mode News
================

New in version 6.3.1
-----------------------
- ‘py-up’ new command as pythonic ‘backward-sexp’,
  ‘py-down’ as ‘forward-sexp’
   consider  
   (define-key python-mode-map [(control meta f)] (quote py-down))
   (define-key python-mode-map [(control meta b)] (quote py-up))

- ‘py-electric-backspace-mode’ is a minor-mode now.

  ‘py-toggle-py-electric-backspace-mode’ new command

  M-x customize-variable ‘py-electric-backspace-p’ RET in
  order to change the default.

- TAB calls ‘py-indent-line’ by default.

- New customizable ‘py-start-in-virtualenv-p’ 
  When ‘py-shell-virtualenv-root’ is set, Emacs should start there.
  Default is nil

- ‘py-nav-last-prompt’ new command

  Jump to last prompt as in comint-shell

- ‘py-register-shell-buffer-p’ new option
  when customized to ‘t’, a py-shell gets a register key
  according to ‘py-register-char’, default is ‘y’
  C-x r j y
  then should jump to the py-shell buffer

- ‘py-toggle-py-register-shell-buffer-p’  new command

- Use ‘pyflakes3’

- ‘py-python-edit-version’ now defaults to "python3",

- Customizable boolean ‘py-do-completion-p’ 
  permits disabling python-mode native completion.

- ‘run-travis-ci.sh’ renamed into generic ‘run-tests.sh’

New in version 6.3.0
-----------------------

- <RET> and <C-j> normalized/swapped

  <RET> now defaults to ‘py-newline-and-indent’
  <C-j> is set to ‘newline’

- New commands:
  py-prettyprint-assignment
  py-toggle-py-split-window-on-execute
  py-toggle-session-mode
  py-show
  py-show-all
  py-hide-section
  py-fast-send-string
  py-toggle-py-verbose-p
  py-execute-buffer-fast

  py-show-FORM commands replaced by single ‘py-show’

- column-marker.el removed, its provided by melpa

- py-smart-indentation defaults to nil. Setting it to ‘t’ considered
  useful if customizing ‘py-indent-offset’ is no option - for example
  if indentation step is unknown.

- `py-comment-auto-fill’ renamed ‘py-toggle-comment-auto-fill'

New in version 6.2.3